fix notification colors

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -48,4 +48,9 @@ $bottom-nav-height: 44;
   overflow-y: auto;  /*adds scroll to this container*/
 }
 
+@mixin notification{
+  margin-bottom:44px + $content-margin * 1px!important;
+  color:black;
+}
+
 
