--- a/src/app/shared/components/notification/notification.component.html
+++ b/src/app/shared/components/notification/notification.component.html
@@ -1,2 +1,5 @@
-<mat-icon class="mr-2" [ngClass]="data.colorClass" >{{data.icon}}</mat-icon>
-<span>{{ data.message }}</span>
+<span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+    <mat-icon>{{data.icon}}</mat-icon>
+    <span>{{ data.message }}</span>
+</span>
+
