moved autocomplete search from view to form in timesheet + cleanup logs

--- a/src/app/timesheet/components/timesheet-form/timesheet-form.component.html
+++ b/src/app/timesheet/components/timesheet-form/timesheet-form.component.html
@@ -3,5 +3,6 @@
 [datePreset]="datePreset"
 [timesheet]="timesheetPreset$ | async"
 [missions]="missions$ | async"
-(formSubmitted)="onSubmit($event)">
+(formSubmitted)="onSubmit($event)"
+(missionsSearch)="onMissionSearch($event)">
 </app-timesheet-form-view>
