--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -3,8 +3,7 @@
 
     <mat-tab label="Profil">
       <div class="p-2">
-        <app-profile-form
-          *ngIf="user"
+        <app-profile-form *ngIf="user$ | async; let user"
           [user]="user"
           (profileUpdated)="updateProfile($event)">
         </app-profile-form>
