cleanup, add onpush to layout & cleanup routes

--- a/src/app/shared/layout/main-nav/main-bottom-nav/main-bottom-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-bottom-nav/main-bottom-nav.component.html
@@ -20,7 +20,7 @@
 
         </button>
 
-        <button *ifRole="[Roles.Leder, Roles.Mellomleder, Roles.Ansatt]" [routerLink]="['/timer/ukevisning']" [routerLinkActive]="['active']" fxFlex
+        <button *ifRole="[Roles.Leder, Roles.Mellomleder, Roles.Ansatt]" [routerLink]="['/timer']" [routerLinkActive]="['active']" fxFlex
          mat-icon-button aria-label="Gå til timeliste">
             <mat-icon matBadgeColor="warn" matBadgeSize="small">timer</mat-icon>
         </button>
