--- a/src/app/shared/layout/main-nav/main-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-nav.component.html
@@ -1,12 +1,12 @@
-<mat-sidenav-container class="bg-background h-100">
+<mat-sidenav-container class="bg-background h-100" *ngIf="config$ | async; let config">
 
   <mat-sidenav fixedInViewport #drawer class="mat-elevation-z4 bg-primary" 
-    [attr.role]="isXs ? 'dialog' : 'navigation'"
-    [mode]="isXs ? 'over' : 'side'"
-    [opened]="!isXs">
+    [attr.role]="config.isXs ? 'dialog' : 'navigation'"
+    [mode]="config.isXs ? 'over' : 'side'"
+    [opened]="!config.isXs">
     <app-main-side-nav-content 
       [user]="currentUser$ | async" 
-      (navItemClicked)="toggleDrawer()"
+      (navItemClicked)="toggleDrawer(config.isXs)"
       (hasLoggedOut)="handleLogout()">
     </app-main-side-nav-content>
   </mat-sidenav>
@@ -14,7 +14,7 @@
 
   <mat-sidenav-content class="column">
 
-    <app-main-top-nav [config]="config$ | async" (menuBtnClicked)="toggleDrawer()" class="nav"></app-main-top-nav>
+    <app-main-top-nav [config]="config" (menuBtnClicked)="toggleDrawer(config.isXs)" class="nav"></app-main-top-nav>
 
     <div class="main-content">
       <router-outlet></router-outlet>
