--- a/src/app/shared/layout/main-nav/main-top-nav/main-top-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-top-nav/main-top-nav.component.html
@@ -1,18 +1,17 @@
 <mat-toolbar *ngIf="config" class="bg-primary-dark toolbar-slim" 
   [ngClass]="{'mat-elevation-z4': config.elevationEnabled}">
    
-    <button  *ngIf="config.backFn else menuBtn"
-      (click)="handleFn(config.backFn, config.backFnParams)"
-      mat-icon-button aria-label="Tilbake">
-      <mat-icon class="scale-150">chevron_left</mat-icon>
-    </button>
+    <app-icon-button *ngIf="config.backFn else menuBtn" 
+    [config]="{
+      callback: config.backFn, 
+      params: config.backFnParams,
+      aria: 'Tilbake',
+      icon: 'chevron_left',
+      iconSizeClass: 'scale-150'}">
+    </app-icon-button>
     
     <ng-template #menuBtn>
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="onMenuButtonClick()"
+      <button mat-icon-button aria-label="Toggle sidenav" (click)="onMenuButtonClick()"
         fxHide fxShow.xs>
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
