--- a/src/app/shared/components/timesheet-card/timesheet-card.component.html
+++ b/src/app/shared/components/timesheet-card/timesheet-card.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="space-between start" class="timesheet-card bg-foreground"
   *ngIf="timesheet">
 
-  <span fxLayout="row" fxLayoutAlign="space-between stretch" class="w-100" *ngIf="timesheet">
+  <span fxLayout="row" fxLayoutAlign="space-between stretch" class="w-100">
 
     <span fxLayout="column" fxLayoutAlign="start start">
       <span class="mat-body-2 p-0">
