--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,13 +2,13 @@
 
 <div class="p-2 max-width">
   <mat-grid-list cols="2" rowHeight="3:2" gutterSize="5" class="mat-subheading-2 mb-2">
-    <mat-grid-tile class="mat-elevation-z2 bg-foreground" matRipple [routerLink]="['/oppdrag']">
+    <mat-grid-tile class="mat-elevation-z2 bg-foreground anim-block" matRipple [routerLink]="['/oppdrag']">
       <span class="text-center">
         <mat-icon class="scale-150">view_list</mat-icon><br />
         <span>Oppdrag</span>
       </span>
     </mat-grid-tile>
-    <mat-grid-tile class="mat-elevation-z2 bg-foreground" matRipple [routerLink]="['/timer']">
+    <mat-grid-tile class="mat-elevation-z2 bg-foreground anim-block" matRipple [routerLink]="['/timer']">
       <span class="text-center">
         <mat-icon class="scale-150">timer</mat-icon><br />
         <span>Timer</span>
@@ -17,7 +17,7 @@
   </mat-grid-list>
   
   <ng-container *ifRole="[Roles.Leder]">
-    <span class="mat-body-2">Administrering</span>
+    <span class="mat-body-2 anim-block">Administrering</span>
 
     <app-list-card text="Administrer timer" startIcon="date_range" [routerLink]="['/timeadministrering']">
     </app-list-card>
@@ -26,12 +26,12 @@
     <app-list-card text="Administrer brukere" startIcon="people" [routerLink]="['/brukere']">
     </app-list-card>
   
-    <span class="mat-body-2">Statistikk</span>
+    <span class="mat-body-2 anim-block">Statistikk</span>
     <app-list-card text="Timestatistikk" startIcon="assessment" [routerLink]="['/timestatistikk']">
     </app-list-card>
   </ng-container>
 
-  <span class="mat-body-2">Sist besøkte oppdrag</span>
+  <span class="mat-body-2 anim-block">Sist besøkte oppdrag</span>
   
   <app-list-card *ngFor="let mission of missionHistory$ | async"
     startIcon="history"
