--- a/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.html
+++ b/src/app/shared/components/image-viewer-dialog/image-viewer-dialog.component.html
@@ -1,6 +1,3 @@
-
-
-
 <mat-toolbar #imageToolBar class="toolbar-slim image-toolbar color-accent" fxLayout="row" fxLayoutAlign="space-between center"
 [@showHideToolbar]="toolbarHidden ? 'hide' : 'show'">
     <button mat-icon-button aria-label="Lukk" (click)="onNoClick()">
@@ -9,10 +6,14 @@
     <button mat-icon-button (click)="openBottomSheet()"><mat-icon>more_vert</mat-icon></button>
 </mat-toolbar>
 
-<img *ngIf="currentImage" (tap)="toggleToolBar()" (swiperight)="previousImage()" (swipeleft)="nextImage()" [src]="currentImage.fileURL" layout-fill/>
+<img *ngIf="currentImage" 
+  (tap)="toggleToolBar()" 
+  (swiperight)="previousImage()" 
+  (swipeleft)="nextImage()" 
+  [src]="currentImage.fileURL" layout-fill/>
 
 <div class="page_counter" [@showHideCounter]="toolbarHidden ? 'hide' : 'show'">
-  <h5>{{ this.index + 1 }} / {{ this.images.length }}</h5>
+  <h5>{{ index + 1 }} / {{ images.length }}</h5>
 </div>
 
 
