--- a/src/app/shared/components/submit-button/submit-button.component.html
+++ b/src/app/shared/components/submit-button/submit-button.component.html
@@ -1,9 +1,9 @@
 
   <button mat-raised-button class="w-100"
     color="primary"
-    [disabled]="disabled || loading"
-    [class.spinner]="loading">
-    <mat-icon *ngIf="icon && !loading">{{ icon }}</mat-icon>
-    {{ loading ? '&nbsp;' : text }}
+    [disabled]="disabled || (loading$ | async)"
+    [class.spinner]="loading$ | async">
+    <mat-icon *ngIf="icon && !(loading$ | async)">{{ icon }}</mat-icon>
+    {{(loading$ | async) ? '&nbsp;' : text }}
   </button>
 
