--- a/src/app/shared/layout/main-nav/main-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-nav.component.html
@@ -16,8 +16,8 @@
 
     <app-main-top-nav [config]="config" (menuBtnClicked)="toggleDrawer(config.isXs)" class="nav"></app-main-top-nav>
 
-    <div class="main-content">
-      <router-outlet></router-outlet>
+    <div class="main-content" [@routeAnimation]="prepareRoute(outlet)">
+      <router-outlet #outlet="outlet"></router-outlet>
     </div>
     
 
