--- a/src/app/timesheet/timesheet-list/timesheet-list.component.html
+++ b/src/app/timesheet/timesheet-list/timesheet-list.component.html
@@ -1,29 +1,23 @@
 <div fxLayout="column" fxLayoutAlign="start stretch" class="h-100">
-        
-        <ng-container>
-            <app-timesheet-list-menu 
-                [filter]="getCurrentFilter()"
-                (filterClick)="openFilterSheet()"
-                (statusChanged)="changeStatus($event)">
-            </app-timesheet-list-menu>
 
-            <button mat-mini-fab aria-label="ny" class="action_fab"
-                (click)="openTimesheetForm(getCurrentFilter().mission)">
-                <mat-icon class="scale-125">add</mat-icon>
-            </button>
-        </ng-container>
-
-
+    <button mat-mini-fab aria-label="ny" class="action_fab anim-block"
+        (click)="openTimesheetForm(getCurrentFilter().mission)">
+        <mat-icon class="scale-125">add</mat-icon>
+    </button>
+    <ng-container *ngIf="(timesheets$ | async)?.length else noSheets; let timesheets">
         <cdk-virtual-scroll-viewport itemSize="148" [attr.minBufferPx]="6*148" [attr.maxBufferPx]="8*148" fxFlex>
-            <div class="m-2 mat-elevation-z3" *cdkVirtualFor="let timesheet of timesheets$ | async">
-                <app-timesheet-card         
-                [timesheet]="timesheet"
-                (deleteClicked)="deleteTimesheet($event)"
-                (editClicked)="openTimesheetForm(undefined, $event)">
+            <div class="m-2 mat-elevation-z3 anim-block" *cdkVirtualFor="let timesheet of timesheets$ | async">
+                <app-timesheet-card [timesheet]="timesheet" (deleteClicked)="deleteTimesheet($event)"
+                    (editClicked)="openTimesheetForm(undefined, $event)">
                 </app-timesheet-card>
             </div>
         </cdk-virtual-scroll-viewport>
-
+    </ng-container>
 </div>
 
-  
+<ng-template #noSheets>
+    <span class="mt-3 text-center">
+        <p>Finner ingen timer med gitte filtre. </p>
+        <button mat-raised-button color="accent" (click)="openFilterSheet()">Åpne filter</button>
+    </span>
+</ng-template>
