--- a/src/app/timesheet/timesheet-week-view/timesheet-week-view.component.html
+++ b/src/app/timesheet/timesheet-week-view/timesheet-week-view.component.html
@@ -5,7 +5,7 @@
 
     <ng-container *ngFor="let weekDay of [1,2,3,4,5]"> 
 
-        <div class="w-100" fxLayout="column" fxLayoutAlign="start center">
+        <div class="w-100 anim-block" fxLayout="column" fxLayoutAlign="start center">
 
           <app-timesheet-day-label class="w-100 mb-1"
             [date]="vm.dateParams | getDateByDateParams : weekDay"
