--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,6 +54,8 @@ body {font-family: Roboto, "Helvetica Neue", sans-serif;overflow:hidden;}
 
 .extended-dialog{max-width:90vw!important}
 
+.h-min-100{min-height:100%}
+
 .action_fab{
   position: fixed!important;
   right: $content-margin * 1px!important;
@@ -124,6 +126,8 @@ body {font-family: Roboto, "Helvetica Neue", sans-serif;overflow:hidden;}
   }
 }
 
+.mat-drawer-container {position: unset!important;}//Fix for bug on iOs
+
 mat-bottom-sheet-container{
   padding:0!important;
 }
@@ -141,7 +145,9 @@ mat-toolbar-single-row.toolbar-slim{
 
 //Ag material
 .mat-button-toggle-group{
+  border:none;
   .mat-button-toggle-appearance-standard {
+
     .mat-button-toggle-label-content {
       line-height: 38px!important;
     }
