add animate css animations (v1)

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,5 +1,5 @@
 
-  <mat-card class="app-card m-3" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px"
+  <mat-card class="app-card m-3 fadeIn" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px"
     ngClass="ml-auto mr-auto" [ngClass.xs]="{'ml-auto':false, 'mr-auto':false}">
 
     <img src="assets/icons/icon-144x144.png" style="width:120px;height:120px" />
