--- a/src/app/timesheet/timesheet-week-view/timesheet-week-view.component.html
+++ b/src/app/timesheet/timesheet-week-view/timesheet-week-view.component.html
@@ -5,16 +5,16 @@
 
     <ng-container *ngFor="let weekDay of [1,2,3,4,5]"> 
 
-        <div class="w-100 anim-block" fxLayout="column" fxLayoutAlign="start center">
+        <div class="w-100" fxLayout="column" fxLayoutAlign="start center">
 
-          <app-timesheet-day-label class="w-100 mb-1"
+          <app-timesheet-day-label class="w-100 mb-1 fadeInDown"
             [date]="vm.dateParams | getDateByDateParams : weekDay"
             (labelClicked)="openTimesheetForm($event)">
           </app-timesheet-day-label>
 
           <div class="w-100" style="padding: 0 1px 0 1px"
             fxLayout="column" fxLayoutAlign="start center" fxFlex>
-              <app-timesheet-mission-bar class="w-100 mb-1"
+              <app-timesheet-mission-bar class="w-100 mb-1 fadeIn"
                 *ngFor="let timesheet of vm.days[weekDay] | sortByDate: 'startTime';" 
                 [timesheet]="timesheet"
                 (barClicked)="timesheet.status ? openTimesheetCard($event) : openTimesheetForm(undefined, $event)"
