--- a/src/app/data-management/data-manager/data-table-picker/data-table-picker.component.html
+++ b/src/app/data-management/data-manager/data-table-picker/data-table-picker.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="fill" class="data-picker mat-elevation-z2 w-100">
+<mat-form-field appearance="fill" class="data-picker mat-elevation-z2 w-100 fadeInLeft">
     <mat-label>Velg</mat-label>
     <mat-select [ngModel]="selectedTable" (ngModelChange)="changeTable($event)">
       <mat-option *ngFor="let table of tables" value="{{ table }}">{{ table }}</mat-option>
