--- a/src/app/data-management/data-manager/data-table/data-table.component.html
+++ b/src/app/data-management/data-manager/data-table/data-table.component.html
@@ -1,7 +1,7 @@
 
 
     <ag-grid-angular #dataGrid
-        class="ag-theme-balham mat-elevation-z2 h-100"
+        class="ag-theme-balham mat-elevation-z2 h-100 fadeInRight"
         rowSelection="multiple"
         suppressRowClickSelection="true"
         suppressColumnVirtualisation="true"
@@ -13,12 +13,12 @@
     </ag-grid-angular>
 
 
-    <span fxLayout="row" fxLayoutAlign="space-between none" >
-        <button mat-raised-button aria-label="Slett" color="warn" (click)="openDeleteDialog()">
+    <span fxLayout="row" fxLayoutAlign="space-between none">
+        <button mat-raised-button aria-label="Slett" class="backInUp" color="warn" (click)="openDeleteDialog()">
         <mat-icon>delete_forever</mat-icon>
         </button>
 
-        <button mat-raised-button aria-label="Ny" color="accent" (click)="createItem.emit()">
+        <button mat-raised-button aria-label="Ny" class="backInUp" color="accent" (click)="createItem.emit()">
         <mat-icon>add</mat-icon>
         </button>
     </span>
