--- a/src/app/mission/mission-details/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission/mission-details/mission-details-view/mission-details-view.component.html
@@ -1,6 +1,6 @@
 <mat-tab-group mat-stretch-tabs color="accent">
   <mat-tab label="Generelt">
-    <mat-card class="app-card m-2 anim-block" *ngIf="mission">
+    <mat-card class="app-card m-2 fadeInLeft" *ngIf="mission">
       <mat-card-header>
         Informasjon
       </mat-card-header>
@@ -25,7 +25,7 @@
       </mat-card-content>
     </mat-card> 
 
-    <mat-card class="app-card m-2 anim-block" *ngIf="reports && reports.length != 0">
+    <mat-card class="app-card m-2 fadeInLeft" *ngIf="reports && reports.length != 0">
       <mat-card-header>
         Rapporter
       </mat-card-header>
@@ -73,7 +73,7 @@
 <button
     *ifRole="[Roles.Leder, Roles.Ansatt, Roles.Mellomleder]"
     mat-mini-fab aria-label="ny"
-    class="action_fab anim-block"
+    class="action_fab"
     (click)="imageInput.click()">
     <mat-icon>camera_enhance</mat-icon>
 </button>
