--- a/src/app/shared/layout/icon-button/icon-button.component.html
+++ b/src/app/shared/layout/icon-button/icon-button.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="config">
-    <button mat-icon-button *ifRole="config.allowedRoles"
+    <button mat-icon-button *ifRole="config.allowedRoles" class="backInDown"
         [attr.aria-label]="config.aria"
         [ngClass]="[
             config.colorClass ? config.colorClass : '', 
