--- a/src/app/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
+++ b/src/app/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
@@ -7,8 +7,8 @@
 
 <ng-template let-summaries #yearList> 
     <div class="p-0" fxLayout="column" fxLayoutAlign="start stretch">
-        <div class="app-card mat-elevation-z2 m-1 p-0" matRipple
-            *ngFor="let summary of summaries"
+        <div class="app-card mat-elevation-z2 m-1 p-0 fadeInRight" matRipple
+            *ngFor="let summary of summaries; trackBy: trackByUserName"
             (click)="updateQuery({userName: summary.userName})">
             <app-timesheet-summary-card-content [summary]="summary"></app-timesheet-summary-card-content>
         </div> 
@@ -17,27 +17,30 @@
 
 <ng-template let-summaries #weekList>  
     <div class="p-0" style="height:100%" fxLayout="column" fxLayoutAlign="start stretch">
-        <cdk-virtual-scroll-viewport itemSize="82" [attr.minBufferPx]="13*82" [attr.maxBufferPx]="13*82" fxFlex>
-            <app-swipe-card 
-                *cdkVirtualFor="let summary of summaries; trackBy: trackByFn; templateCacheSize:0"          
-                [navButton]="{callback: updateQuery, params: {week: summary.week}}"
-                [swipeEnabled]="summary.openHours > 0"
-                [swipeButton]="{
-                    callback: confirmTimesheets, 
-                    params: [summary.timesheets], 
-                    icon: summary.openHours > 0 ? 'lock_open' : 'lock', 
-                    colorClass: summary.openHours > 0 ? 'bg-warn' : 'bg-success'}">
-                <app-timesheet-summary-card-content [summary]="summary"></app-timesheet-summary-card-content>
-            </app-swipe-card>
+        <cdk-virtual-scroll-viewport itemSize="82"  fxFlex>
+            <div class="fadeInRight"
+                *cdkVirtualFor="let summary of summaries; trackBy: trackByWeek; templateCacheSize:0">
+                <app-swipe-card                          
+                    [navButton]="{callback: updateQuery, params: {week: summary.week}}"
+                    [swipeEnabled]="summary.openHours > 0"
+                    [swipeButton]="{
+                        callback: confirmTimesheets, 
+                        params: [summary.timesheets], 
+                        icon: summary.openHours > 0 ? 'lock_open' : 'lock', 
+                        colorClass: summary.openHours > 0 ? 'bg-warn' : 'bg-success'}">
+                    <app-timesheet-summary-card-content [summary]="summary"></app-timesheet-summary-card-content>
+                </app-swipe-card>
+            </div>
         </cdk-virtual-scroll-viewport>
     </div>
 </ng-template>
 
 <ng-template let-timesheets #timesheetList> 
     <div class="p-0 h-100" fxLayout="column" fxLayoutAlign="start stretch"> 
-    <cdk-virtual-scroll-viewport itemSize="108" [attr.minBufferPx]="6*108" [attr.maxBufferPx]="8*108" fxFlex>
-        <div class="m-1" *cdkVirtualFor="let timesheet of timesheets">
-            <app-timesheet-card class="mat-elevation-z2" adminView="true"        
+    <cdk-virtual-scroll-viewport itemSize="108" fxFlex>
+        <div class="m-1 fadeInRight" 
+            *cdkVirtualFor="let timesheet of timesheets; trackBy: trackById">
+            <app-timesheet-card adminView="true"        
                 [timesheet]="timesheet"      
                 (statusChanged)="changeTimesheetStatus($event.id, $event.status)">
             </app-timesheet-card>
