--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -1,12 +1,14 @@
-<ng-container *ngIf="users$ | async else loading; let users">
-  <app-user-card *ngFor="let user of users"
-        [user]="user"
-        [editButton]="{
-          icon: 'edit', 
-          allowedRoles: [Roles.Leder], 
-          callback: openUserForm, params: [user.userName]
-        }">
-  </app-user-card>
+<ng-container *ngIf="users$ | async else loading; let users; let index = index">
+  <div class="fadeInRight">
+    <app-user-card *ngFor="let user of users" 
+      [user]="user"
+      [editButton]="{
+        icon: 'edit', 
+        allowedRoles: [Roles.Leder], 
+        callback: openUserForm, params: [user.userName]
+      }">
+    </app-user-card>
+  </div>
 </ng-container>
 
 <ng-template #loading>
