--- a/src/app/data-management/data-manager/data-table/data-table.component.html
+++ b/src/app/data-management/data-manager/data-table/data-table.component.html
@@ -1,7 +1,8 @@
 
 
-    <ag-grid-angular #dataGrid
-        class="ag-theme-balham mat-elevation-z2 h-100 fadeInRight"
+    
+    <ag-grid-angular #dataGrid fxFlex
+        class="ag-theme-balham mat-elevation-z2 fadeInRight"
         rowSelection="multiple"
         suppressRowClickSelection="true"
         suppressColumnVirtualisation="true"
