--- a/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
+++ b/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
@@ -9,6 +9,21 @@
     <p *ngIf="missions == undefined || missions.length == 0" class="m-2">Fant ingen oppdrag</p>
 
     <cdk-virtual-scroll-viewport itemSize="57" fxFlex>
+        <!-- <app-list-card 
+        startIcon="home_work"
+        [endIcon]="check"
+        [text]="dasadads">
+        </app-list-card>
+        <app-list-card 
+        startIcon="home_work"
+        [endIcon]="check"
+        [text]="dasadads">
+        </app-list-card>
+        <app-list-card 
+        startIcon="home_work"
+        [endIcon]="check"
+        [text]="dasadads">
+        </app-list-card> -->
         <div class="fadeInRight" 
             *cdkVirtualFor="let mission of missions; trackBy: trackByFn; templateCacheSize:0">
             <app-list-card 
