--- a/src/app/mission/components/image-viewer-dialog/image-viewer-dialog.component.scss
+++ b/src/app/mission/components/image-viewer-dialog/image-viewer-dialog.component.scss
@@ -2,8 +2,8 @@
 
 img{
     display: block;
-    max-width:100vw;
-    max-height:100vh;
+    max-width:100%;
+    max-height:100%;
     transform: translatex(calc(50vw - 50%)) translatey(calc(50vh - 50%));
 }
 
