--- a/src/app/mission/mission-details/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission/mission-details/mission-details-view/mission-details-view.component.html
@@ -31,7 +31,7 @@
       </mat-card-header>
       <mat-card-content>
         <mat-nav-list class="p-0">
-          <mat-list-item *ngFor="let report of reports;">
+          <mat-list-item *ngFor="let report of reports">
   
             <mat-icon mat-list-icon>description</mat-icon>
             <a mat-line href="{{ report.fileURL }}">{{ report.reportType?.name }}</a>
