users can have employers attached

--- a/src/app/users/components/user-form/user-form-view/user-form-view.component.html
+++ b/src/app/users/components/user-form/user-form-view/user-form-view.component.html
@@ -40,6 +40,12 @@
     </mat-select>
   </mat-form-field>
 
+  <mat-form-field [fxHide]="role.value !== Roles.Oppdragsgiver">
+    <mat-select placeholder="Oppdragsgiver" (change)="changeEmployerId($event)" formControlName="employerId">
+      <mat-option *ngFor="let employer of employers" [value]="employer.id">{{ employer.name }}</mat-option>
+    </mat-select>
+  </mat-form-field>
+
   <mat-form-field>
     <input matInput placeholder="Kontaktnummer" formControlName="phoneNumber">
     <mat-error *ngIf="this.phoneNumber.invalid">
