--- a/src/app/shared/layout/simple-top-nav/simple-top-nav.component.html
+++ b/src/app/shared/layout/simple-top-nav/simple-top-nav.component.html
@@ -1,6 +1,6 @@
 <div class="column">
 
-    <mat-toolbar *ngIf="config" class="toolbar-slim mat-elevation-z2 nav" [ngClass]="config.colorClass ? config.colorClass : 'bg-accent'">  
+    <mat-toolbar *ngIf="config" class="toolbar-slim mat-elevation-z2 flex-nav" [ngClass]="config.colorClass ? config.colorClass : 'bg-accent'">  
         <app-icon-button [config]="config.leftBtn"></app-icon-button>
           
         <span class="mr-auto">    
