--- a/src/app/shared/layout/simple-top-nav/simple-top-nav.component.scss
+++ b/src/app/shared/layout/simple-top-nav/simple-top-nav.component.scss
@@ -1,13 +1,12 @@
 @import '../../../../variables';
 
 .column {
-  @include flex-column;
-}
-
-.nav {
-  @include flex-nav;
+  height: 100%;
+  display: flex;
+  flex-direction: column; 
 }
 
 .main-content {
-  @include flex-content;
+  flex-grow: 1;
+  overflow-y: auto;  
 }
