--- a/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
+++ b/src/app/mission/mission-list/mission-list-view/mission-list-view.component.html
@@ -1,46 +1,22 @@
-
 <div class="p-1 h-100" style="overflow:hidden" fxLayout="column" fxLayoutAlign="start stretch">
 
     <div class="mt-2 mb-2 max-width fadeIn">
-        <input matInput appInputListener (inputChanged)="onSearch($event)" placeholder="Søk med adresse eller id" class="w-100 p-1 pl-3 mat-elevation-z2"
-        style="background:white;border:none;border-radius:10px">
+        <input matInput appInputListener (inputChanged)="onSearch($event)" placeholder="Søk med adresse eller id"
+            class="w-100 p-1 pl-3 mat-elevation-z2" style="background:white;border:none;border-radius:10px">
     </div>
 
     <p *ngIf="missions == undefined || missions.length == 0" class="m-2">Fant ingen oppdrag</p>
 
-    <cdk-virtual-scroll-viewport itemSize="57" fxFlex>
-        <!-- <app-list-card 
-        startIcon="home_work"
-        [endIcon]="check"
-        [text]="dasadads">
+    <div class="fadeInRight" *cdkVirtualFor="let mission of missions; trackBy: trackByFn; templateCacheSize:0">
+        <app-list-card startIcon="home_work" [endIcon]="mission.finished ? 'check':'chevron_right'"
+            [text]="'(' + mission.id + ') ' + mission.address" [routerLink]="['/oppdrag', mission.id, 'detaljer']">
         </app-list-card>
-        <app-list-card 
-        startIcon="home_work"
-        [endIcon]="check"
-        [text]="dasadads">
-        </app-list-card>
-        <app-list-card 
-        startIcon="home_work"
-        [endIcon]="check"
-        [text]="dasadads">
-        </app-list-card> -->
-        <div class="fadeInRight" 
-            *cdkVirtualFor="let mission of missions; trackBy: trackByFn; templateCacheSize:0">
-            <app-list-card 
-                    startIcon="home_work"
-                    [endIcon]="mission.finished ? 'check':'chevron_right'"
-                    [text]="'(' + mission.id + ') ' + mission.address"
-                    [routerLink]="['/oppdrag', mission.id, 'detaljer']">
-            </app-list-card>
-        </div>
+    </div>
     </cdk-virtual-scroll-viewport>
 
 </div>
 
-<button
-    *ifRole="[Roles.Leder, Roles.Mellomleder]"
-    mat-mini-fab aria-label="ny"
-    class="action_fab"
+<button *ifRole="[Roles.Leder, Roles.Mellomleder]" mat-mini-fab aria-label="ny" class="action_fab"
     (click)="openMissionForm()">
     <mat-icon>add</mat-icon>
 </button>
